# FlexPushdownDB-exp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  requirements.txt
fpdb-catalogue/: CMakeLists.txt
fpdb-catalogue/src/local-fs/: LocalFSTable.cpp
fpdb-catalogue/src/obj-store/: ObjStoreCatalogueEntry.cpp  ObjStoreCatalogueEntryReader.cpp  ObjStorePartition.cpp
fpdb-catalogue/src/s3/: S3CatalogueEntryReader.cpp  S3Table.cpp
fpdb-main/: CMakeLists.txt
fpdb-main/bench/: BitmapPushdownBench.cpp  BytesReadBench.cpp  PredTransBench.cpp  SSBDistFPDBStoreBench.cpp  TPCHBench.cpp  TPCHDistBench.cpp  TPCHDistFPDBStoreBench.cpp  TPCHFPDBStoreDiffNodeBench.cpp
fpdb-main/src/: CAFInit.cpp  Client.cpp  ExecConfig.cpp  Server.cpp
fpdb-main/test/: BitmapPushdownBench.cpp  BitmapPushdownTest.cpp  BytesReadTest.cpp  CachingOnlyTest.cpp  Globals.h  HybridTest.cpp  MainTest.cpp  PredTransTest.cpp  SSBFPDBStoreSameNodeTest.cpp  SSBTest.cpp  TPCHDistTest.cpp  TPCHFPDBStoreDiffNodeTest.cpp  TPCHFPDBStoreSameNodeTest.cpp  TPCHFPDBStoreTest.cpp  TPCHTest.cpp  TestUtil.cpp  TestUtil.h
fpdb-main/test-base/: AdaptPushdownTestUtil.cpp  AdaptPushdownTestUtil.h  BitmapPushdownTestUtil.cpp  BitmapPushdownTestUtil.h  Globals.h  PredTransTestUtil.cpp  PredTransTestUtil.h  TestUtil.cpp  TestUtil.h
fpdb-store-client/: CMakeLists.txt
fpdb-store-client/src/: FPDBStoreClientConfig.cpp
fpdb-store-client/test/: Module.hpp
fpdb-store-server/: CMakeLists.txt
fpdb-store-server/executable/: Main.cpp
fpdb-store-server/gen-cpp/: FileService.grpc.pb.cc  FileService.grpc.pb.h  FileService.pb.cc  FileService.pb.h
fpdb-store-server/src/: CSVInput.cpp  FPDBStoreExecution.cpp  FPDBStoreServerConfig.cpp  FileHeaderInfo.cpp  Global.hpp  InputSerializationType.cpp  Server.cpp
fpdb-store-server/src/cache/: BitmapCache.cpp  BloomFilterCache.cpp  TableCache.cpp
fpdb-store-server/src/caf/: ActorManager.cpp
fpdb-store-server/src/cluster/: ClusterActor.cpp
fpdb-store-server/src/file/: ArrowRemoteFileInputStream.cpp  FileServiceHandler.cpp  RemoteCSVReader.cpp  RemoteParquetReader.cpp
fpdb-store-server/src/flight/: AdaptPushdownManager.cpp  BloomFilterCache.cpp  ClearBitmapCmd.cpp  CmdObject.cpp  CmdType.cpp  FlightHandler.cpp  FlightInputSerialization.cpp  FlightSelectObjectContentRequest.cpp  GetBitmapTicket.cpp  GetObjectTicket.cpp  GetTableTicket.cpp  PutAdaptPushdownMetricsCmd.cpp  PutBitmapCmd.cpp  SelectObjectContentCmd.cpp  SelectObjectContentTicket.cpp  SetAdaptPushdownCmd.cpp  TicketObject.cpp  TicketType.cpp  Util.cpp
fpdb-store-server/test/: DistributedTest.cpp  FileServiceTest.cpp  FlightBasicTest.cpp  FlightMacExceptionMain.cpp  FlightSelectTest.cpp  FlightTest.cpp  Global.hpp  Main.cpp  Module.hpp
normal-aws/: CMakeLists.txt
normal-aws/src/: AWSClient.cpp  AWSConfig.cpp  ProfileAWSCredentialsProviderChain.cpp  S3Util.cpp
normal-cache/: CMakeLists.txt
normal-cache/src/: SegmentCache.cpp  SegmentData.cpp  SegmentKey.cpp  SegmentMetadata.cpp  SegmentRange.cpp  Util.cpp
normal-cache/src/policy/: BeladyCachingPolicy.cpp  BeladyCachingPolicyHelper.cpp  CachingPolicy.cpp  LFUCachingPolicy.cpp  LFUSCachingPolicy.cpp  LRUCachingPolicy.cpp  WLFUCachingPolicy.cpp
normal-cache/test/: CacheTest.cpp
normal-caf/: CMakeLists.txt
normal-caf/src/: CAFUtil.cpp
normal-calcite/cpp/: CMakeLists.txt
normal-calcite/cpp/src/: Calcite.cpp  CalciteClient.cpp  CalciteConfig.cpp
normal-catalogue/: CMakeLists.txt
normal-catalogue/ATTIC/: Connector.cpp
normal-catalogue/src/: Catalogue.cpp  CatalogueEntry.cpp  Partition.cpp  Relation.cpp  Table.cpp
normal-catalogue/src/format/: CSVFormat.cpp  Format.cpp  ParquetFormat.cpp
normal-catalogue/src/local-fs/: LocalFSCatalogueEntry.cpp  LocalFSPartition.cpp  LocalFSRelation.cpp  LocalFSTable.cpp  LocalFileSystemCatalogueEntry.cpp
normal-catalogue/src/s3/: S3CatalogueEntry.cpp  S3CatalogueEntryReader.cpp  S3Partition.cpp  S3Relation.cpp  S3SelectCatalogueEntry.cpp  S3SelectConnector.cpp  S3Table.cpp  S3Util.cpp
normal-executor/: CMakeLists.txt
normal-executor/src/: Execution.cpp  Executor.cpp
normal-executor/src/cache/: SegmentCacheActor.cpp
normal-executor/src/message/: CompleteMessage.cpp  ConnectMessage.cpp  Envelope.cpp  ErrorMessage.cpp  Message.cpp  ScanMessage.cpp  StartMessage.cpp  TupleMessage.cpp  TupleSetIndexMessage.cpp
normal-executor/src/physical/: LocalPOpDirectory.cpp  LocalPOpDirectoryEntry.cpp  POpActor.cpp  POpConnection.cpp  POpContext.cpp  POpDirectory.cpp  POpDirectoryEntry.cpp  PhysicalOp.cpp  PhysicalPlan.cpp  PrePToPTransformer.cpp
normal-expression/: CMakeLists.txt
normal-expression-gandiva/: CMakeLists.txt
normal-expression-gandiva/src/: Add.cpp  And.cpp  BinaryExpression.cpp  Canonicalizer.cpp  Cast.cpp  Column.cpp  DateAdd.cpp  DateExtract.cpp  Divide.cpp  EqualTo.cpp  Expression.cpp  Filter.cpp  GreaterThan.cpp  GreaterThanOrEqualTo.cpp  If.cpp  In.cpp  InDate64.cpp  InDouble.cpp  InInt32.cpp  InInt64.cpp  InString.cpp  IsNull.cpp  LessThan.cpp  LessThanOrEqualTo.cpp  Like.cpp  Multiply.cpp  Not.cpp  NotEqualTo.cpp  NumericLiteral.cpp  Or.cpp  Projector.cpp  StringLiteral.cpp  Substr.cpp  Subtract.cpp  Util.cpp
normal-expression-gandiva/test/: BinaryExpressionTest.cpp  CastTest.cpp  MultiplyTest.cpp  ThreadTest.cpp
normal-frontend/: CMakeLists.txt
normal-frontend/src/: CAFInit.cpp  Client.cpp  ClientMain.cpp  ExecConfig.cpp  Main.cpp  Server.cpp  ServerMain.cpp  TestCalcite.cpp  custom_type4.cpp
normal-frontend/test/: Globals.h  SSBTest.cpp  TPCHTest.cpp  TestUtil.cpp  TestUtil.h
normal-plan/: CMakeLists.txt
normal-plan/src/: Mode.cpp  Util.cpp
normal-plan/src/calcite/: CalcitePlanJsonDeserializer.cpp
normal-plan/src/function/: SumLogicalFunction.cpp
normal-plan/src/operator_/: AggregateLogicalOperator.cpp  S3SelectScanLogicalOperator.cpp
normal-plan/src/prephysical/: AggregatePrePFunction.cpp  AggregatePrePOp.cpp  FilterPrePOp.cpp  (+10 more)
normal-util/: CMakeLists.txt
normal-util/src/: Util.cpp
normal-util/test/: Globals.h  TraitsTest.cpp  UtilTest.cpp
(+891 files in other folders)
